# PickupCoinGame

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
engine/: window_context.cxx
game/: game.cxx
